--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,13 +1,11 @@
 spring.application.name=MediManage
 springdoc.api-docs.path=/api-docs
-
 # Database Configuration
 # Production
 #spring.datasource.url=jdbc:postgresql://${DB_ORIGIN:localhost}:${DB_PORT:5432}/${DB_NAME:medi_manage_db}
 #spring.datasource.username=${DB_USER:postgres}
 #spring.datasource.password=${DB_PASSWORD:postgres}
 #spring.datasource.driver-class-name=org.postgresql.Driver
-
 # Development
 spring.datasource.url=jdbc:h2:file:~/data/medi_manage_db_test
 spring.datasource.driverClassName=org.h2.Driver
@@ -15,13 +13,11 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-
 # Hibernate
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
 # Security and seed
 api.security.token.secret=${JWT_SECRET}
 api.security.cors.origins=${CORS_ORIGINS}
