--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.0",
     "sharp": "^0.33.4",
+    "tailwind-merge": "^2.4.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
