--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 # Hibernate
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
