--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=MediManage
 springdoc.api-docs.path=/api-docs
+spring.threads.virtual.enabled=false
 # Database Configuration
 # Production
 #spring.datasource.url=jdbc:postgresql://${DB_ORIGIN:localhost}:${DB_PORT:5432}/${DB_NAME:medi_manage_db}
