raw: add sorting swagger ui properties

--- a/server/src/main/resources/application-development.properties
+++ b/server/src/main/resources/application-development.properties
@@ -16,3 +16,6 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # Security and seed
 api.security.token.secret=${JWT_SECRET}
 api.security.cors.origins=${CORS_ORIGINS}
+# Spring Docs
+springdoc.swagger-ui.operationsSorter=alpha
+springdoc.swagger-ui.tagsSorter=alpha
