--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.0",
+    "react-pdf-html": "^2.1.2",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.2",
     "zod": "^3.23.8"
