refactor: add password encoder properties

--- a/server/src/main/resources/application-production.properties
+++ b/server/src/main/resources/application-production.properties
@@ -14,3 +14,8 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # Security and seed
 api.security.token.secret=${JWT_SECRET}
 api.security.cors.origins=${CORS_ORIGINS}
+api.security.argon2.salt=${ENCODER_SALT:16}
+api.security.argon2.length=${ENCODER_LENGTH:32}
+api.security.argon2.parallelism=${ENCODER_PARALLELISM:2}
+api.security.argon2.memory=${ENCODER_MEMORY:65536}
+api.security.argon2.iterations=${ENCODER_ITERATIONS:4}
