feat(seeder): add UserSeeder for creating default admin user and update .env.example with admin credentials

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+APP_ADMIN_EMAIL='admin@example.com'
+APP_ADMIN_NAME=Administrator
+APP_ADMIN_PASSWORD='123456A#'
+
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
