feat(column): format 'created_at' date in DataTable and add date-fns dependency

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.2.1",
+        "date-fns": "^4.1.0",
         "globals": "^16.4.0",
         "input-otp": "^1.4.2",
         "laravel-vite-plugin": "^2.0",
