--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "laravel/wayfinder": "^0.1.9",
+        "owen-it/laravel-auditing": "^14.0",
         "spatie/laravel-permission": "^6.21"
     },
     "require-dev": {
