--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "devDependencies": {
         "@eslint/js": "^9.36.0",
         "@laravel/vite-plugin-wayfinder": "^0.1.7",
+        "@types/lodash": "^4.17.20",
         "@types/node": "^24.5.2",
         "eslint": "^9.36.0",
         "eslint-config-prettier": "^10.1.8",
@@ -26,16 +27,34 @@
     "dependencies": {
         "@headlessui/react": "^2.2.9",
         "@inertiajs/react": "^2.2.1",
+        "@lexical/code": "^0.36.1",
+        "@lexical/file": "^0.36.1",
+        "@lexical/hashtag": "^0.36.1",
+        "@lexical/html": "^0.36.1",
+        "@lexical/link": "^0.36.1",
+        "@lexical/list": "^0.36.1",
+        "@lexical/markdown": "^0.36.1",
+        "@lexical/overflow": "^0.36.1",
+        "@lexical/react": "^0.36.1",
+        "@lexical/rich-text": "^0.36.1",
+        "@lexical/selection": "^0.36.1",
+        "@lexical/table": "^0.36.1",
+        "@lexical/text": "^0.36.1",
+        "@lexical/utils": "^0.36.1",
         "@radix-ui/react-avatar": "^1.1.10",
         "@radix-ui/react-checkbox": "^1.3.3",
         "@radix-ui/react-collapsible": "^1.1.12",
         "@radix-ui/react-dialog": "^1.1.15",
         "@radix-ui/react-dropdown-menu": "^2.1.16",
+        "@radix-ui/react-icons": "^1.3.2",
         "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-navigation-menu": "^1.2.14",
+        "@radix-ui/react-popover": "^1.1.15",
+        "@radix-ui/react-scroll-area": "^1.2.10",
         "@radix-ui/react-select": "^2.2.6",
         "@radix-ui/react-separator": "^1.1.7",
         "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-tabs": "^1.1.13",
         "@radix-ui/react-toggle": "^1.1.10",
         "@radix-ui/react-toggle-group": "^1.1.11",
         "@radix-ui/react-tooltip": "^1.2.8",
@@ -46,15 +65,20 @@
         "@vitejs/plugin-react": "^5.0.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "cmdk": "^1.1.1",
         "concurrently": "^9.2.1",
         "date-fns": "^4.1.0",
         "globals": "^16.4.0",
         "input-otp": "^1.4.2",
         "laravel-vite-plugin": "^2.0",
+        "lexical": "^0.36.1",
+        "lodash": "^4.17.21",
         "lucide-react": "^0.544.0",
         "next-themes": "^0.4.6",
         "react": "^19.1.1",
+        "react-colorful": "^5.6.1",
         "react-dom": "^19.1.1",
+        "react-error-boundary": "^6.0.0",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.13",
