--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,18 +25,19 @@ jobs:
           tools: composer:v2
           coverage: xdebug
 
+      - uses: actions/checkout@v4
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 10
 
-      - name: Setup Node ${{ matrix.node-version }}
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'pnpm'
+          cache: "pnpm"
 
-      - name: Install Node Dependencies
+      - name: Install dependencies
         run: pnpm install
 
       - name: Install Dependencies
