--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@lexical/table": "^0.36.1",
         "@lexical/text": "^0.36.1",
         "@lexical/utils": "^0.36.1",
+        "@radix-ui/react-accordion": "^1.2.12",
         "@radix-ui/react-avatar": "^1.1.10",
         "@radix-ui/react-checkbox": "^1.3.3",
         "@radix-ui/react-collapsible": "^1.1.12",
