--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
         "next-themes": "^0.4.6",
         "react": "^19.1.1",
         "react-colorful": "^5.6.1",
+        "react-day-picker": "^9.11.0",
         "react-dom": "^19.1.1",
         "react-error-boundary": "^6.0.0",
         "sonner": "^2.0.7",
