--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "@radix-ui/react-toggle": "^1.1.10",
         "@radix-ui/react-toggle-group": "^1.1.11",
         "@radix-ui/react-tooltip": "^1.2.8",
+        "@tailwindcss/typography": "^0.5.19",
         "@tailwindcss/vite": "^4.1.14",
         "@tanstack/react-table": "^8.21.3",
         "@types/react": "^19.2.0",
