--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
         "react-day-picker": "^9.11.0",
         "react-dom": "^19.2.0",
         "react-error-boundary": "^6.0.0",
+        "recharts": "2.15.4",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.14",
