build(npm): update dependencies and go back to npm for compatibility

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -27,19 +27,13 @@ jobs:
       - name: Install Dependencies
         run: |
           composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-          pnpm install
+          npm install
 
       - name: Run Pint
         run: vendor/bin/pint
 
       - name: Format Frontend
-        run: pnpm run format
+        run: npm run format
 
       - name: Lint Frontend
-        run: pnpm run lint
-
-      # - name: Commit Changes
-      #   uses: stefanzweifel/git-auto-commit-action@v5
-      #   with:
-      #     commit_message: fix code style
-      #     commit_options: '--no-verify'
+        run: npm run lint
