--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,26 +25,20 @@ jobs:
           tools: composer:v2
           coverage: xdebug
 
-      - uses: actions/checkout@v4
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 10
-
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: "pnpm"
+          node-version: '22'
+          cache: 'npm'
 
-      - name: Install dependencies
-        run: pnpm install
+      - name: Install Node Dependencies
+        run: npm ci
 
       - name: Install Dependencies
         run: composer install --no-interaction --prefer-dist --optimize-autoloader
 
       - name: Build Assets
-        run: pnpm run build
+        run: npm run build
 
       - name: Copy Environment File
         run: cp .env.example .env
