--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
         "react-day-picker": "^9.11.1",
         "react-dom": "^19.2.0",
         "react-error-boundary": "^6.0.0",
+        "react-fast-marquee": "^1.6.5",
         "recharts": "3.2.1",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.1",
