--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
         "react-dom": "^19.2.0",
         "react-error-boundary": "^6.0.0",
         "react-fast-marquee": "^1.6.5",
+        "react-medium-image-zoom": "^5.4.0",
         "recharts": "3.2.1",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.1",
