fix(.env.example): add missing admin first and last name fields

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ APP_URL=http://localhost
 APP_ADMIN_EMAIL='admin@example.com'
 APP_ADMIN_NAME=Administrator
 APP_ADMIN_PASSWORD='123456A#'
+APP_ADMIN_FIRST_NAME='Sr. Admin'
+APP_ADMIN_LAST_NAME='of Site'
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
