--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@eslint/js": "^9.38.0",
         "@laravel/vite-plugin-wayfinder": "^0.1.7",
         "@types/lodash": "^4.17.20",
+        "@types/lodash.debounce": "^4.0.9",
         "@types/node": "^24.8.1",
         "eslint": "^9.38.0",
         "eslint-config-prettier": "^10.1.8",
@@ -77,6 +78,7 @@
         "laravel-vite-plugin": "^2.0",
         "lexical": "^0.37.0",
         "lodash": "^4.17.21",
+        "lodash.debounce": "^4.0.8",
         "lucide-react": "^0.546.0",
         "next-themes": "^0.4.6",
         "react": "^19.2.0",
