--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "@laravel/vite-plugin-wayfinder": "^0.1.7",
         "@types/lodash": "^4.17.20",
         "@types/lodash.debounce": "^4.0.9",
-        "@types/node": "^24.8.1",
+        "@types/node": "^24.9.1",
         "eslint": "^9.38.0",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-react": "^7.37.5",
@@ -23,11 +23,11 @@
         "prettier": "^3.6.2",
         "prettier-plugin-organize-imports": "^4.3.0",
         "prettier-plugin-tailwindcss": "^0.7.1",
-        "typescript-eslint": "^8.46.1"
+        "typescript-eslint": "^8.46.2"
     },
     "dependencies": {
         "@headlessui/react": "^2.2.9",
-        "@inertiajs/react": "^2.2.8",
+        "@inertiajs/react": "^2.2.9",
         "@lexical/code": "^0.37.0",
         "@lexical/file": "^0.37.0",
         "@lexical/hashtag": "^0.37.0",
@@ -62,7 +62,7 @@
         "@radix-ui/react-toggle-group": "^1.1.11",
         "@radix-ui/react-tooltip": "^1.2.8",
         "@tailwindcss/typography": "^0.5.19",
-        "@tailwindcss/vite": "^4.1.14",
+        "@tailwindcss/vite": "^4.1.15",
         "@tanstack/react-table": "^8.21.3",
         "@types/react": "^19.2.2",
         "@types/react-dom": "^19.2.2",
@@ -88,17 +88,17 @@
         "react-error-boundary": "^6.0.0",
         "react-fast-marquee": "^1.6.5",
         "react-medium-image-zoom": "^5.4.0",
-        "recharts": "3.3.0",
+        "recharts": "^2.15.4",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.1",
-        "tailwindcss": "^4.1.14",
+        "tailwindcss": "^4.1.15",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.9.3",
-        "vite": "^7.1.10"
+        "vite": "^7.1.11"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.52.5",
-        "@tailwindcss/oxide-linux-x64-gnu": "^4.1.14",
+        "@tailwindcss/oxide-linux-x64-gnu": "^4.1.15",
         "lightningcss-linux-x64-gnu": "^1.30.2"
     }
 }
