--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.38.0",
+        "@laravel/echo-react": "^2.2.4",
         "@laravel/vite-plugin-wayfinder": "^0.1.7",
         "@types/lodash": "^4.17.20",
         "@types/lodash.debounce": "^4.0.9",
@@ -20,9 +21,11 @@
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-react": "^7.37.5",
         "eslint-plugin-react-hooks": "^7.0.0",
+        "laravel-echo": "^2.2.4",
         "prettier": "^3.6.2",
         "prettier-plugin-organize-imports": "^4.3.0",
         "prettier-plugin-tailwindcss": "^0.7.1",
+        "pusher-js": "^8.4.0",
         "typescript-eslint": "^8.46.2"
     },
     "dependencies": {
