--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "@lexical/text": "^0.37.0",
         "@lexical/utils": "^0.37.0",
         "@radix-ui/react-accordion": "^1.2.12",
+        "@radix-ui/react-alert-dialog": "^1.1.15",
         "@radix-ui/react-avatar": "^1.1.10",
         "@radix-ui/react-checkbox": "^1.3.3",
         "@radix-ui/react-collapsible": "^1.1.12",
