--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "tuncaybahadir/quar": "^1.5"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.16",
         "barryvdh/laravel-ide-helper": "^3.6",
         "fakerphp/faker": "^1.24",
         "laravel/pail": "^1.2",
