feat(metadata): update package metadata with name, version, author, and license information

--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
+    "name": "medimanage",
+    "version": "0.8.5",
     "private": true,
     "type": "module",
+    "author": {
+        "name": "João Mendes Jorge Barata Ribeiro",
+        "email": "jmj@barataribeiro.com",
+        "url": "https://github.barataribeiro.com/"
+    },
+    "license": "GPL-3.0-only",
+    "bugs": {
+        "url": "https://github.com/Barata-Ribeiro/MediManage/issues",
+        "email": "jmj@barataribeiro.com"
+    },
     "scripts": {
         "build": "vite build",
         "build:ssr": "vite build && vite build --ssr",
