--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "medimanage",
-    "version": "0.8.5",
+    "version": "0.9.0",
     "private": true,
     "type": "module",
     "author": {
@@ -26,19 +26,22 @@
         "@eslint/js": "^9.39.1",
         "@laravel/echo-react": "^2.2.6",
         "@laravel/vite-plugin-wayfinder": "^0.1.7",
-        "@types/lodash": "^4.17.20",
         "@types/lodash.debounce": "^4.0.9",
+        "@types/lodash": "^4.17.20",
         "@types/node": "^24.10.0",
-        "eslint": "^9.39.1",
+        "@types/react-dom": "^19.2.2",
+        "@types/react": "^19.2.2",
         "eslint-config-prettier": "^10.1.8",
-        "eslint-plugin-react": "^7.37.5",
         "eslint-plugin-react-hooks": "^7.0.1",
+        "eslint-plugin-react": "^7.37.5",
+        "eslint": "^9.39.1",
         "laravel-echo": "^2.2.6",
-        "prettier": "^3.6.2",
         "prettier-plugin-organize-imports": "^4.3.0",
         "prettier-plugin-tailwindcss": "^0.7.1",
+        "prettier": "^3.6.2",
         "pusher-js": "^8.4.0",
-        "typescript-eslint": "^8.46.3"
+        "typescript-eslint": "^8.46.3",
+        "typescript": "^5.9.3"
     },
     "dependencies": {
         "@headlessui/react": "^2.2.9",
@@ -82,8 +85,6 @@
         "@tailwindcss/typography": "^0.5.19",
         "@tailwindcss/vite": "^4.1.16",
         "@tanstack/react-table": "^8.21.3",
-        "@types/react": "^19.2.2",
-        "@types/react-dom": "^19.2.2",
         "@vitejs/plugin-react": "^5.1.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -111,12 +112,14 @@
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.16",
         "tailwindcss-animate": "^1.0.7",
-        "typescript": "^5.9.3",
         "vite": "^7.2.0"
     },
     "optionalDependencies": {
-        "@rollup/rollup-linux-x64-gnu": "4.52.5",
-        "@tailwindcss/oxide-linux-x64-gnu": "^4.1.16",
-        "lightningcss-linux-x64-gnu": "^1.30.2"
+        "@rollup/rollup-linux-x64-gnu": "4.57.1",
+        "@rollup/rollup-win32-x64-msvc": "4.57.1",
+        "@tailwindcss/oxide-linux-x64-gnu": "^4.1.18",
+        "@tailwindcss/oxide-win32-x64-msvc": "^4.1.18",
+        "lightningcss-linux-x64-gnu": "^1.31.1",
+        "lightningcss-win32-x64-msvc": "^1.31.1"
     }
 }
