--- a/package.json
+++ b/package.json
@@ -26,22 +26,23 @@
         "@eslint/js": "^9.39.1",
         "@laravel/echo-react": "^2.2.6",
         "@laravel/vite-plugin-wayfinder": "^0.1.7",
-        "@types/lodash.debounce": "^4.0.9",
         "@types/lodash": "^4.17.20",
+        "@types/lodash.debounce": "^4.0.9",
         "@types/node": "^24.10.0",
-        "@types/react-dom": "^19.2.2",
         "@types/react": "^19.2.2",
-        "eslint-config-prettier": "^10.1.8",
-        "eslint-plugin-react-hooks": "^7.0.1",
-        "eslint-plugin-react": "^7.37.5",
+        "@types/react-dom": "^19.2.2",
+        "babel-plugin-react-compiler": "^1.0.0",
         "eslint": "^9.39.1",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-react": "^7.37.5",
+        "eslint-plugin-react-hooks": "^7.0.1",
         "laravel-echo": "^2.2.6",
+        "prettier": "^3.6.2",
         "prettier-plugin-organize-imports": "^4.3.0",
         "prettier-plugin-tailwindcss": "^0.7.1",
-        "prettier": "^3.6.2",
         "pusher-js": "^8.4.0",
-        "typescript-eslint": "^8.46.3",
-        "typescript": "^5.9.3"
+        "typescript": "^5.9.3",
+        "typescript-eslint": "^8.46.3"
     },
     "dependencies": {
         "@headlessui/react": "^2.2.9",
