--- a/package.json
+++ b/package.json
@@ -101,18 +101,20 @@
         "lodash.debounce": "^4.0.8",
         "lucide-react": "^0.552.0",
         "next-themes": "^0.4.6",
+        "radix-ui": "^1.4.3",
         "react": "^19.2.0",
         "react-colorful": "^5.6.1",
-        "react-day-picker": "^9.11.1",
+        "react-day-picker": "^9.13.1",
         "react-dom": "^19.2.0",
         "react-error-boundary": "^6.0.0",
         "react-fast-marquee": "^1.6.5",
         "react-medium-image-zoom": "^5.4.0",
         "recharts": "^2.15.4",
+        "shadcn": "^3.8.4",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.16",
-        "tailwindcss-animate": "^1.0.7",
+        "tw-animate-css": "^1.4.0",
         "vite": "^7.2.0"
     },
     "optionalDependencies": {
