chore(deps): update Laravel dependencies for improved compatibility and performance

--- a/composer.json
+++ b/composer.json
@@ -16,22 +16,23 @@
         "asika/agent": "^2.7",
         "barryvdh/laravel-dompdf": "^3.1",
         "inertiajs/inertia-laravel": "^2.0",
-        "laravel/fortify": "^1.31",
-        "laravel/framework": "^12.36",
-        "laravel/reverb": "^1.6",
-        "laravel/tinker": "^2.10",
-        "laravel/wayfinder": "^0.1.12",
+        "laravel/fortify": "^1.34",
+        "laravel/framework": "^12.50",
+        "laravel/reverb": "^1.7",
+        "laravel/tinker": "^2.11",
+        "laravel/wayfinder": "^0.1",
         "owen-it/laravel-auditing": "^14.0",
-        "spatie/laravel-permission": "^6.22",
-        "tuncaybahadir/quar": "^1.5"
+        "spatie/laravel-permission": "^6.24",
+        "tuncaybahadir/quar": "^1.7"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.16",
         "barryvdh/laravel-ide-helper": "^3.6",
         "fakerphp/faker": "^1.24",
+        "laravel/boost": "*",
         "laravel/pail": "^1.2",
-        "laravel/pint": "^1.25",
-        "laravel/sail": "^1.47",
+        "laravel/pint": "^1.27",
+        "laravel/sail": "^1.52",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.8",
         "pestphp/pest": "^3.8",
